a1/tests/accept/05.ul
boolean baz(string[10] args) {

}
