a1/tests/reject/07.ul
boolean foo(int param1, int param2, ) {

}
